--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.7.8",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
