--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "swiper": "^11.1.15",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
