--- a/carsharing-backend/Dockerfile
+++ b/carsharing-backend/Dockerfile
@@ -39,6 +39,7 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80 for Nginx
 EXPOSE 80
+ENV PORT=80
 
 # Start Nginx and PHP-FPM
 CMD php-fpm && nginx -g "daemon off;"
